--- a/madchat/src/index.css
+++ b/madchat/src/index.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+
 * {
   color: #fff;
-  font-family:'Times New Roman', Times, serif;
+  font-family:'Roboto', Times, serif;
 }
 
 body {
