--- a/madchat/src/Help.css
+++ b/madchat/src/Help.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-color: #282c34;
+  background-color: #343541;
 }
 
 .loading-spinner {
