--- a/madchat/src/index.css
+++ b/madchat/src/index.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 
 * {
-  color: #fff;
-  font-family:'Roboto', Times, serif;
+  color: #000000;
+  font-family: ui-sans-serif, -apple-system, system-ui, Segoe UI, Helvetica, Apple Color Emoji, Arial, sans-serif, Segoe UI Emoji, Segoe UI Symbol;
 }
 
 body {
@@ -10,26 +10,38 @@ body {
   padding: 0;
 }
 
+h1 {
+  font-size: 1.875rem;
+  font-weight: 600;
+  line-height: 2.25rem;
+}
+
 .app{
-  background-color: #343541;
+  background-color: #ffffff;
   display: flex;
 }
 
 .side-bar{
-  background-color: #202123;
+  background-color: #f9f9f9;
   height: 100vh;
-  width: 244px;
+  width: 25vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
 button{
-  border: solid 0.5px rgba(255, 255, 255, 0.5);
+  border-color: transparent;
   background-color: transparent;
-  border-radius: 5px;
+  border-radius: 16px;
   padding: 10px;
   margin: 10px;
+
+  transition: background-color 0.2s ease;
+}
+
+button:hover{
+  background-color: #ececec;
 }
 
 nav{
@@ -82,16 +94,14 @@ nav{
 
 input{
   width: 100%;
-  border: none;
+  border-color: #ececec;
+  border-width: 2px;
+  border-style:solid;
   background-color: rgba(255, 255, 255, 0.05);
   padding: 12px 15px;
-  border-radius: 5px;
+  border-radius: 16px;
   font-size: 20px;
-  box-shadow: rgba(0,0,0,0.05) 0 54px 55px,
-                rgba(0,0,0,0.05) 0 -12px 30px,
-                rgba(0,0,0,0.05) 0 4px 6px,
-                rgba(0,0,0,0.05) 0 12px 3px,
-                rgba(0,0,0,0.05) 0 -3px 5px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 input:focus{
