--- a/madchat/src/Login.css
+++ b/madchat/src/Login.css
@@ -1,9 +1,13 @@
 .login-container, .main-container {
     background: white;
-    padding: 20px;
-    border-radius: 10px;
+    height: 100vh;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
   
 .login-input {
@@ -14,7 +18,7 @@
 }
   
 .login-button {
-    background: #007bff;
+    background: black;
     color: white;
     padding: 10px;
     border: none;
@@ -22,6 +26,7 @@
 }
   
 .login-button:hover {
-    background: #0056b3;
+    background: #ececec;
+    color: black;
 }
   
